--- a/style.css
+++ b/style.css
@@ -20,7 +20,23 @@ ul {
 	list-style: none;
 }
 
+button {
+	border: 0;
+	outline: 0;
+	box-shadow: 1px 1px 4px gray;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+input {
+	outline: 0;
+}
+
 body {
+	font-size: 14px;
+	font-family: Arial, Helvetica, sans-serif;
+	color: #5a5a5a;
 	background: url(img/_bg.jpg) top center no-repeat;
 }
 
@@ -29,7 +45,6 @@ header, main, footer {
 	min-width: 788px;
 	max-width: 1000px;
 	margin: 0 auto;
-	/*border: 1px solid gray;*/
 }
 
 header, nav {
@@ -37,33 +52,180 @@ header, nav {
 }
 
 header  {
-	min-height: 174px;
-	/*border: 1px solid gray;*/
+	height: 174px;
+	margin-top: 20px;
+}
+
+h1 {
+	font-size: 20px;
+	font-weight: normal;
+	margin-left: 14px;
+}
+
+h2 {
+	font-size: 16px;
+	font-weight: normal;
+	line-height: 20px;
+	margin-left: 14px;
 }
 
 .logo {
 	width: 150px;
 	min-height: 170px;
-	/*border: 1px solid gray;*/
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
-.sidebar, .image {
-	width: 150px;
-	height: 174px;
-	border: 1px solid gray;
+.logo-min {
+		display: none;
+	}
+
+.logo > div {
+	width: 112px;
+	height: 120px
 }
 
-.search {
+.logo > div img {
+	width: 100%;
+}
+
+.title {
+	font-size: 24px;
+	letter-spacing: 2.4px;
+}
+
+.subtitle {
+	font-size: 11px;
+	letter-spacing: 0.5px;
+	white-space: nowrap;
+}
+
+.topnav {
+	width: 100%;
+	padding: 0 10px 0 5px;
+}
+
+.func, .social, .lang {
 	width: 150px;
-	height: 348px;
-	border: 1px solid gray;
+}
+
+nav button {
+	width: 20px;
+	height: 20px;
+	margin-left: 4px;
+	cursor: pointer;
+	transition: background 0.1s;
+	border: #ddd9 solid 0;
+	border-radius: 2px;
+	background: #fffb;
+	box-shadow: none;
+}
+
+nav button img {
+	width: 75%;
+}
+
+nav button:hover {
+	background: #0cf;
+	box-shadow: 1px 1px 4px gray;
+}
+
+.func, .social, .lang, .topmenu {
+	display: flex;
+	justify-content: space-around;
+}
+
+.microsoft {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-left: 20%;
+}
+
+.microsoft img {
+	width: 120px;
+}
+
+.topnav > nav {
+	justify-content: space-between;
+	height: 40px;
+	align-items: flex-start;
+}
+
+nav:nth-child(2) {
+	justify-content: flex-end;
+}
+
+.topmenu {
+	height: 40px;
+	align-items: center;
+}
+
+.topmenu li:not(:first-child) {
+	margin-left: 20px;
+	align-items: center;
+}
+
+header section {
+	display: flex;
+}
+
+header section div {
+	display: grid;
+	height: 90px;
 }
 
 main {
 	position: relative;
 	min-height: 348px;
 	display: flex;
-	flex-direction: row;
+	justify-content: center;
+}
+
+.sidebar, .image {
+	width: 150px;
+	height: 174px;
+}
+
+.sidebar .wrapper {
+	width: 130px;
+	display: grid;
+	justify-content: center;
+	align-items: center;
+	background: #fff1;
+	border-top: 20px solid #0cf;
+}
+
+.sidebar .wrapper:hover {
+	border-top: 20px solid #aaa9;
+	transition: border 0.4s;
+}
+
+.sidebar .wrapper  li {
+	width: 100px;
+	text-align: center;
+	border-bottom: 1px solid #ddd;
+}
+
+.sidebar .wrapper  a {
+	display: block;
+	font-size: 16px;
+	padding: 8px;
+	color: #4a4a4a;
+}
+
+.sidebar .wrapper  a:hover,
+.topmenu  a:hover {
+	color: #0cf;
+	transition: color 0.1s;
+}
+
+.search {
+	width: 150px;
+	height: 348px;
+	/*border: 1px solid gray;*/
 }
 
 .flex {
@@ -76,11 +238,44 @@ main {
 .banner, .about {
 	width: 70%;
 	height: 174px;
-	border: 1px solid gray;
+	/*border: 1px solid gray;*/
+}
+
+.banner {
+	position: relative;
+	background: url(img/server.jpg) center;
+	background-color: #000a;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.man {
+	width: 140px;
+	height: 174px;
+	left: 28%;
+	position: absolute;
+	background: url(img/man.png) center;
+	background-repeat: no-repeat;
+	background-size: contain;
 }
 
 input {
 	width: 140px;
+}
+
+footer {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.contact {
+	width: 400px;
+	height: 400px;
+	/*border: 1px solid gray;*/
+}
+
+.navbar {
+	display: flex;
 }
 
 @media screen and (max-width: 788px) {
@@ -103,16 +298,48 @@ input {
 }
 
 @media screen and (max-width: 520px) {
-	.banner, .about, .sidebar, .image {
+	.banner, .about, .sidebar, .sidebar .wrapper, .image {
 		width: 100%;
 	}
 
-	header {
-		flex-wrap: wrap;
+	.logo {
+		display: none;
 	}
-	
+
+	.logo-min {
+		display: block;
+	}
+
+	.sidebar {
+		display: flex;
+		justify-content: center;
+	}
+
+	.sidebar .wrapper  li {
+		width: 240px;
+	}
+
+	.topnav div, .topnav nav {
+		margin-bottom: 40px;
+	}
+
+	header, .topnav {
+		flex-wrap: wrap;
+		height: auto;
+		min-height: 174px;
+	}
+
+	nav ul {
+		margin-left: 10px;
+	}
+
 	.logo, .topnav {
 		width: 100%;
 	}
-}
 
+	.topmenu {
+		height: 50px;
+		border-top: 1px solid #4448;
+		border-bottom: 1px solid #4448;
+	}
+}
