--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h2 {
 	font-weight: normal;
 	line-height: 20px;
 	margin-left: 14px;
-	transition: 0.7s opacity, 0.4s transform ease-in-out;
+	/*transition: 0.7s opacity, 0.4s transform ease-in-out;*/
 }
 
 .logo {
@@ -342,23 +342,101 @@ main {
 }
 
 .search input {
+	height: 24px;
+	padding: 10px;
 	width: 140px;
 	margin-bottom: 10px;
 }
 
 footer {
 	display: flex;
-	flex-wrap: wrap;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	flex-direction: row;
 }
 
 .contact {
-	width: 400px;
-	height: 400px;
+	max-width: 200px;
+	min-width: 200px;
+	height: 220px;
 	/*border: 1px solid gray;*/
 }
 
-.navbar {
+.head {
+	height: 100px;
+}
+
+.foot {
+	height: 100px;
 	display: flex;
+	flex-direction: row;
+}
+
+.dell {
+	width: 100%;
+	height: 100px;
+	display: flex;
+	justify-content: center;
+}
+
+.dell img {
+	display: block;
+	width: 200px;
+}
+
+.partner, .location {
+	width: 50%;
+	height: 100%;	
+}
+
+.partner {
+	background: #444;
+	display: block;
+	align-content: flex-start;
+}
+
+.partner img {
+	display: block;
+	width: 100%;
+}
+
+/*.contact  div {
+	border: 1px solid gray;
+}*/
+
+.location {
+	font-size: 11px;
+	padding: 4px;
+	display: flex;
+	align-items: center;
+}
+
+.navbar {
+	width: 65%;
+	display: flex;
+}
+
+.navbar nav {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.navbar ul {
+	width: 50%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin: 0px 0px;
+}
+
+.navbar ul li {
+	width: 100%;
+	min-height: 40px;
+	margin: 2px 10px;
+	font-size: 14px;
+	border-bottom: 1px solid #ddd;
 }
 
 @media screen and (max-width: 788px) {
@@ -414,6 +492,18 @@ footer {
 		position: absolute;
 		right: 20px;
 	}
+
+	footer {
+		flex-wrap: wrap;
+	}
+
+	.navbar {
+		width: 100%;
+	}
+
+	.navbar li {
+		text-align: center;
+	}
 }
 
 @media screen and (max-width: 520px) {
@@ -465,9 +555,33 @@ footer {
 	}
 
 	.topmenu {
+		/*position: fixed;*/
+		z-index: 10;
 		height: 50px;
 		border-top: 1px solid #4448;
 		border-bottom: 1px solid #4448;
+	}
+
+	.func li:nth-child(-n + 2){
+		display: none;
+	}
+
+	.func {
+		width: 54px;
+	}
+
+	.social {
+		width: 208px;
+		margin-left: 54px;
+	}
+
+	nav button {
+		width: 24px;
+		height: 24px;
+	}
+
+	nav button img {
+		width: 95%;
 	}
 
 	.topmenu:hover {
@@ -544,4 +658,3 @@ footer {
 .htmlcontent-leave-to {
 	opacity: .1;
 }
-
