--- a/style.css
+++ b/style.css
@@ -10,12 +10,16 @@
 	margin: 0.5px;
 	padding: 0.5px;
 	box-sizing: border-box;
-	/*border: 1px solid gray;*/
 }
 
 a {
 	text-decoration: none;
 	color: #2a2a2a;
+}
+
+a:hover {
+	color: #09f;
+	transition: color 0.1s;
 }
 
 br {
@@ -44,6 +48,7 @@ body {
 	font-size: 14px;
 	font-family: Arial, Helvetica, sans-serif;
 	color: #5a5a5a;
+	/*background: url(img/_bg_dark.jpg) top center no-repeat;*/
 	background: url(img/_bg.jpg) top center no-repeat;
 }
 
@@ -51,7 +56,7 @@ header, main, footer {
 	width: 70%;
 	min-width: 788px;
 	max-width: 1000px;
-	margin: 0 auto;
+	margin: 0 auto 10px;
 }
 
 header, nav {
@@ -67,7 +72,6 @@ h1 {
 	font-size: 20px;
 	font-weight: normal;
 	margin-left: 14px;
-	/*transition: 0.7s opacity, 0.4s transform ease-in-out;*/
 }
 
 h2 {
@@ -75,7 +79,6 @@ h2 {
 	font-weight: normal;
 	line-height: 20px;
 	margin-left: 14px;
-	/*transition: 0.7s opacity, 0.4s transform ease-in-out;*/
 }
 
 .logo {
@@ -264,7 +267,6 @@ main {
 .banner, .about {
 	width: 70%;
 	height: 174px;
-	/*border: 1px solid gray;*/
 }
 
 .banner, .sidebar {
@@ -295,12 +297,18 @@ main {
 
 .front img, .back img {
 	width: 100%;
+	transition: 0.2s transform;
 }
 
 .front, .back {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.front {
+	background: linear-gradient(#eee0, #7775);
+	cursor: zoom-in;
 }
 
 .description {
@@ -349,6 +357,11 @@ main {
 }
 
 footer {
+	padding: 5px 10px;
+	background: #f4f4f4;
+}
+
+footer .wrapper {
 	display: flex;
 	flex-wrap: nowrap;
 	justify-content: space-between;
@@ -359,7 +372,6 @@ footer {
 	max-width: 200px;
 	min-width: 200px;
 	height: 220px;
-	/*border: 1px solid gray;*/
 }
 
 .head {
@@ -400,10 +412,6 @@ footer {
 	width: 100%;
 }
 
-/*.contact  div {
-	border: 1px solid gray;
-}*/
-
 .location {
 	font-size: 11px;
 	padding: 4px;
@@ -412,7 +420,7 @@ footer {
 }
 
 .navbar {
-	width: 65%;
+	width: 80%;
 	display: flex;
 }
 
@@ -423,20 +431,166 @@ footer {
 }
 
 .navbar ul {
-	width: 50%;
+	width: 100%;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-between;
-	margin: 0px 0px;
+	justify-content: flex-start;
 }
 
 .navbar ul li {
-	width: 100%;
-	min-height: 40px;
+	display: inline-flex;
+	width: 100px;
+	min-height: 15px;
 	margin: 2px 10px;
-	font-size: 14px;
-	border-bottom: 1px solid #ddd;
+	padding: 0 0 3px 10px;
+	font-size: 13px;
+	border-bottom: 1px dotted #ddd;
+}
+
+.navbar ul li:hover {
+	border-bottom: 1px dotted #777;
+}
+
+.navbar ul li a:hover {
+	color: #09f;
+	transition: color 0.1s;
+}
+
+.footnav nav {
+	display: flex;
+	flex-direction: column;
+}
+
+.footnav nav ul {
+	width: 310px;
+	height: 50px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.footnav nav ul:first-child {
+	width: 100%;
+}
+
+.footnav nav ul li:not(:first-child) {
+	margin-left: 40px;
+}
+
+.footnav nav .os li:first-child {
+	width: 60%;
+
+}
+
+.os li:not(:first-child) {
+	display: flex;
+	align-items: center;
+}
+
+.os li a {
+	margin-left: 5px;
+	font-size: 12px;
+}
+
+.os li a:hover {
+	color: #09f;
+	transition: color 0.1s;
+}
+
+.os li img {
+	width: 20px;
+}
+
+.basement {
+	font-size: 12px;
+	text-align: center;
+}
+
+.copyright {
+	margin: 20px auto;
+}
+
+.modal {
+	position: absolute;
+	width: 60%;
+	height: 364px;
+	background: #fffc;
+	left: 150px;
+	right: 25%;
+	z-index: 9;
+	border-radius: 2px;
+	box-shadow: 0px 0px 2px 1px #fff;
+}
+
+.close {
+	position: absolute;
+	border-radius: 2px;
+	z-index: 4;
+	top: 0;
+	right: 0;
+	width: 50px;
+	height: 50px;
+	cursor: pointer;
+	border: 0;
+	background: 0;
+}
+
+.close img {
+	width: 100%;
+}
+
+.close:hover {
+	background: #f00d
+}
+
+/*.mdl {
+	position: absolute;
+	z-index: 4;
+	bottom: 10px;
+	left: 40%;
+	right: 60%;
+}*/
+
+.content {
+	position: absolute;
+	top: 2px;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #fff0;
+	display: flex;
+	color: #222;
+	/*box-shadow: 0 -2px 10px 1px #222;*/
+	font-size: 13px;
+}
+
+.content div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	white-space: nowrap;
+}
+
+.content div:first-child {
+	width: 60%;
+}
+
+.content div:not(:first-child) {
+	width: 40%;
+	align-items: flex-start;
+	overflow: hidden;
+}
+
+.content div img {
+	width: 200px;
+}
+
+@media screen and (max-width: 1200px) {
+	.content {
+		font-size: 12px;
+	}
 }
 
 @media screen and (max-width: 788px) {
@@ -451,7 +605,6 @@ footer {
 
 	h1 {
 		opacity: 0;
-		/*transform: translateY(5px);*/
 	}
 
 	.about {
@@ -461,6 +614,14 @@ footer {
 	.back {
 		display: none;
 	}
+	.content {
+		font-size: 11px;
+	}
+
+	.modal {
+		width: 55%;
+	}
+
 }
 
 @media screen and (max-width: 664px) {
@@ -493,7 +654,7 @@ footer {
 		right: 20px;
 	}
 
-	footer {
+	footer .wrapper {
 		flex-wrap: wrap;
 	}
 
@@ -501,8 +662,29 @@ footer {
 		width: 100%;
 	}
 
-	.navbar li {
-		text-align: center;
+	.navbar nav {
+		width: 520px;
+		margin: 0 auto;
+	}
+
+	.navbar ul {
+		justify-content: space-between;
+	}
+
+	.contact {
+		max-width: 200px;
+		min-width: 200px;
+		height: 220px;
+		margin: 0 auto;
+	}
+
+	.modal {
+		width: 70%;
+		right: 10%;
+	}
+
+	.scale {
+		transform: scale(2);
 	}
 }
 
@@ -608,6 +790,50 @@ footer {
 	.btns {
 		margin-top: 40px;
 	}
+
+	.navbar nav {
+		width: 400px;
+	}
+
+	.os li:first-child {
+		display: none;
+	}
+
+	.os {
+		justify-content: center;
+		margin-left: -20px;
+	}
+
+	.os {
+		margin-left: -20px;
+	}
+
+	.modal {
+		left: 0;
+		right: 0;
+		top: 160px;
+		height: 470px;
+		width: 100%;
+		background: #fffd;
+		backdrop-filter: blur(6px);
+	}
+	.content {
+		font-size: 14px;
+	}
+} 
+
+@media screen and (max-width: 490px) {
+	.modal {
+    	width: 100%;
+    }
+
+    .content{
+    	left: 110px;
+    }
+
+    .content div img {
+	width: 1px;
+}
 }
 
 @media screen and (max-width: 400px) {
@@ -618,6 +844,16 @@ footer {
 	.topmenu {
 		margin: 0 auto;
 	}
+
+	.navbar nav {
+		width: 320px;
+	}
+
+	.navbar nav ul  {
+		width: 80%;
+		margin: 0 auto;
+	}
+
 }
 
 @media screen and (max-width: 310px) {
@@ -638,17 +874,6 @@ footer {
 	opacity: .1;
 }
 
-.item-enter-active,
-.item-leave-active {
-	transition: all .2s;
-}
-
-.item-enter,
-.item-leave-to  {
-	transform: translateY(5px);
-	opacity: .1;
-}
-
 .htmlcontent-enter-active,
 .htmlcontent-leave-active {
 	transition: all .2s;
@@ -657,4 +882,24 @@ footer {
 .htmlcontent-enter,
 .htmlcontent-leave-to {
 	opacity: .1;
+}
+
+.modal-enter-active,
+.modal-leave-active {
+	transition: all .2s
+}
+
+.modal-enter,
+.modal-leave-to {
+	transform: translateY(100px);
+	opacity: 0
+}
+
+/* VUE */
+.blur {
+	filter: blur(16px);
+}
+
+.scale {
+	transform: scale(4.4);
 }
