--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
   bottom: -400px;
   height: 400px;
   display: none;
-  background: url(img/_bg.jpg);
+  background: url(img/bg.jpg);
   background-size: contain;
 }
 
@@ -140,8 +140,8 @@ body {
 	font-size: 14px;
 	font-family: Arial, Helvetica, sans-serif;
 	color: #5a5a5a;
-	/*background: url(img/_bg_dark.jpg) top center no-repeat;*/
-	background: url(img/_bg.jpg) top center no-repeat;
+	/*background: url(img/bg_dark.jpg) top center no-repeat;*/
+	background: url(img/bg.jpg) top center no-repeat;
 }
 
 header, main, footer {
