--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ body {
 	color: #5a5a5a;
 	/*background: url(img/bg_dark.jpg) top center no-repeat;*/
 	background: url(img/bg.jpg) top center no-repeat;
+	transition: 0.6s background;
 }
 
 header, main, footer {
