--- a/css/style.css
+++ b/css/style.css
@@ -165,8 +165,12 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	color: #5a5a5a;
 	background: url(../img/bg.jpg) top center no-repeat;
-	transition: 0.6s background, 0.2s transform ease-in-out 0.1s;
+	transition: 0.6s background, 0.1s transform ease-in-out 0.1s;
 	overflow-x: hidden;
+	opacity: 0;
+	transform: translateY(10px);
+	-webkit-animation: fade-in 0.4s 0.3s ease-in-out forwards;
+	animation: fade-in 0.4s 0.3s ease-in-out forwards;
 }
 
 .header, .app, footer, .htmlcontent {
@@ -368,7 +372,7 @@ nav:nth-child(2) {
 .sidebar .wrapper  li {
 	width: 100px;
 	text-align: center;
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px dotted #4448;
 }
 
 .sidebar .wrapper  a {
@@ -463,6 +467,9 @@ nav:nth-child(2) {
 	align-items: flex-end;
 	bottom: 5%;
 	color: #aaa7;
+	opacity: 0;
+	-webkit-animation: fade-in 1.3s 0.3s ease-in-out forwards;
+	animation: fade-in 1.3s 0.3s ease-in-out forwards;
 }
 
 .about {
@@ -636,7 +643,7 @@ footer .wrapper {
 	margin: 2px 10px;
 	padding: 0 0 3px 10px;
 	font-size: 13px;
-	border-bottom: 1px dotted #ddd;
+	border-bottom: 1px dotted #ddd4;
 }
 
 .navbar ul li:hover {
@@ -938,10 +945,6 @@ footer .wrapper {
 		background-size: cover;
 		background-repeat: no-repeat;
 	}
-
-	.pagetitle {
-		height: 50px;
-	}
 }
 
 @media screen and (max-width: 520px) {
@@ -1067,10 +1070,10 @@ footer .wrapper {
   	.modal {
 	    left: 0;
 	    right: 0;
-	    top: 150px;
+	    top: 134px;
 	    height: 470px;
 	    width: 100%;
-	    background: #fffd;
+	    background: #fffc;
 	    backdrop-filter: blur(6px);
 	    z-index: 11;
   	}
@@ -1086,6 +1089,15 @@ footer .wrapper {
 
 	.pagename {
 		font-size: 48px;
+	}
+
+	.pagetitle {
+		height: 50px;
+		background: linear-gradient(#eee0, #7775);
+	}
+
+	.marquee {
+		display: none;
 	}
 
 } 
@@ -1183,4 +1195,18 @@ footer .wrapper {
 .modal-leave-to {
 	transform: translateY(100px);
 	opacity: 0
+}
+
+@-webkit-keyframes fade-in {
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+@keyframes fade-in {
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
 }
