--- a/css/style.css
+++ b/css/style.css
@@ -1192,3 +1192,18 @@ footer .wrapper {
 	transform: translateY(100px);
 	opacity: 0
 }
+
+@-webkit-keyframes fade-in {
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+@keyframes fade-in {
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
